--- a/thrustrap/CMakeLists.txt
+++ b/thrustrap/CMakeLists.txt
@@ -7,6 +7,9 @@ include(EnvCompilationFlags)
 
 # see cuda-/FindCuda.cmake
 find_package(CUDA ${OPTICKS_CUDA_VERSION} REQUIRED QUIET)
+#list(APPEND CUDA_NVCC_FLAGS "-arch=sm_30;-std=c++11;-O2;-DVERBOSE")
+list(APPEND CUDA_NVCC_FLAGS "-std=c++11")
+SET(CUDA_PROPAGATE_HOST_FLAGS OFF)
 find_package(PLog REQUIRED)
 find_package(OpticksBoost REQUIRED)
 
