replace old BFile::existsPath that didnt do envvar substitition with BFile::ExistsFile

--- a/optixrap/tests/CMakeLists.txt
+++ b/optixrap/tests/CMakeLists.txt
@@ -12,7 +12,7 @@ foreach(TEST_CC_SRC ${TEST_CC_SRCS})
     add_dependencies(check ${TGT})
 
     target_link_libraries(${TGT} ${LIBRARIES} OptiXRap)
-    install(TARGETS ${TGT} DESTINATION bin)
+    install(TARGETS ${TGT} DESTINATION lib)
 endforeach()
 
 
