--- a/optickscore/CMakeLists.txt
+++ b/optickscore/CMakeLists.txt
@@ -147,7 +147,7 @@ set(HEADERS
 add_library( ${name}  SHARED ${SOURCES}  )
 target_link_libraries( ${name} ${LIBRARIES} )
 install(TARGETS ${name}  DESTINATION lib)
-install(FILES ${hdrs} DESTINATION include/${name})
+install(FILES ${HEADERS} DESTINATION include/${name})
 
 #add_subdirectory(tests EXCLUDE_FROM_ALL)
 add_subdirectory(tests)
