move test material refractive index to opticksdata for portability

--- a/ggeo/tests/CMakeLists.txt
+++ b/ggeo/tests/CMakeLists.txt
@@ -73,6 +73,9 @@ set(TEST_SOURCES
 
     GSurfaceLibTest.cc
     GScintillatorLibTest.cc
+    GMaterialLibTest.cc
+    GPropertyMapTest.cc
+    GPropertyTest.cc
 
 )
 
