resolve issue of invalid device function with thrust runtime by setting nvcc flags to pick arch of sm_30 or better, review nvcc flags, detect compute capability

--- a/cudarap/tests/CMakeLists.txt
+++ b/cudarap/tests/CMakeLists.txt
@@ -20,5 +20,21 @@ foreach(SRC ${TEST_SOURCES})
 endforeach()
 
 
+#file(GLOB TEST_CU_SRCS "*Test.cu")
+
+set(TEST_SOURCES_CU
+   cudaGetDevicePropertiesTest.cu
+)
+
+set(XOPT --disable-warnings)
+foreach(CU ${TEST_SOURCES_CU})
+    get_filename_component(TGT ${CU} NAME_WE)
+    cuda_add_executable(${TGT} ${CU} OPTIONS ${XOPT})
+    add_test(${name}.${TGT} ${TGT})
+    add_dependencies(check ${TGT})
+
+    target_link_libraries(${TGT} ${LIBRARIES} )
+    install(TARGETS ${TGT} DESTINATION lib)
+endforeach()
 
 
