--- a/cudarap/CMakeLists.txt
+++ b/cudarap/CMakeLists.txt
@@ -7,8 +7,6 @@ include(EnvCompilationFlags)
 
 find_package(PLog REQUIRED)
 find_package(CUDA ${OPTICKS_CUDA_VERSION} REQUIRED QUIET)
-list(APPEND CUDA_NVCC_FLAGS "-std=c++11")
-SET(CUDA_PROPAGATE_HOST_FLAGS OFF)
 
 find_package(SysRap REQUIRED)
 
@@ -63,12 +61,8 @@ SET(HEADERS
 )
 
 
-#
-# CUDA headers yield many:
-#   /usr/local/cuda/include/device_functions.hpp:283:3:   warning: extension used [-Wlanguage-extension-token]
-#
-set(XOPT --disable-warnings) # TODO: find way to selectively disable warnings
-CUDA_ADD_LIBRARY( ${name} ${SOURCES} OPTIONS -gencode=arch=compute_30,code=sm_30 ${XOPT}  )
+
+CUDA_ADD_LIBRARY( ${name} ${SOURCES} OPTIONS  )
 target_link_libraries(${name} ${LIBRARIES} )
 
 set(LIBRARIES ${LIBRARIES} ${name} )  
