--- a/optixrap/CMakeLists.txt
+++ b/optixrap/CMakeLists.txt
@@ -22,10 +22,6 @@ endif()
 ########################
 
 find_package(CUDA ${OPTICKS_CUDA_VERSION} REQUIRED QUIET)
-#list(APPEND CUDA_NVCC_FLAGS "-arch=sm_30;-std=c++11;-O2;-DVERBOSE")
-#list(APPEND CUDA_NVCC_FLAGS "-std=c++11")
-#list(APPEND CUDA_NVCC_FLAGS "--use_fast_math")
-#SET(CUDA_PROPAGATE_HOST_FLAGS OFF)
 include(OptiXThrustMacros)      # for optixthrust_add_executable handling .cu partitioning
 
 include(EnvCompilationFlags)   
@@ -202,15 +198,7 @@ set(OX_HEADERS
 
 # OptiX prog within "cu/"  Thrust/CUDA not in "cu/"
 
-set(XOPT --disable-warnings)
-
-if(APPLE)
-   set(NOPT -gencode=arch=compute_30,code=sm_30)
-else(APPLE)
-   set(NOPT)
-endif(APPLE)
-
-optixthrust_add_library( ${name} ${SOURCES} OPTIONS ${NOPT} ${XOPT}) 
+optixthrust_add_library( ${name} ${SOURCES} OPTIONS ) 
 target_link_libraries( ${name} ${LIBRARIES} )
 
 set(TARGET    "${name}")
