--- a/optixrap/CMakeLists.txt
+++ b/optixrap/CMakeLists.txt
@@ -138,6 +138,7 @@ set(SOURCES
     cu/hemi-pmt.cu 
     cu/generate.cu
     cu/textureTest.cu
+    cu/minimalTest.cu
 )
 
 
@@ -151,7 +152,10 @@ set(OX_PTXS
     ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_hemi-pmt.cu.ptx
     ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_generate.cu.ptx
     ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_textureTest.cu.ptx
+    ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_minimalTest.cu.ptx
 )
+
+message(" ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_minimalTest.cu.ptx " )
 
 
 set(HEADERS
