--- a/optixrap/tests/CMakeLists.txt
+++ b/optixrap/tests/CMakeLists.txt
@@ -7,6 +7,7 @@ set(TEST_SOURCES
     OPropertyLibTest.cc
     OScintillatorLibTest.cc
     OOTextureTest.cc
+    OOMinimalTest.cc
 )
 
 foreach(SRC ${TEST_SOURCES})
