--- a/optixrap/tests/CMakeLists.txt
+++ b/optixrap/tests/CMakeLists.txt
@@ -8,6 +8,7 @@ set(TEST_SOURCES
     OScintillatorLibTest.cc
     OOTextureTest.cc
     OOMinimalTest.cc
+    OOContextTest.cc
 )
 
 foreach(SRC ${TEST_SOURCES})
