--- a/opticksgl/tests/CMakeLists.txt
+++ b/opticksgl/tests/CMakeLists.txt
@@ -1,19 +1,19 @@
 cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
-set(name OpticksOpTest)
+set(name OpticksGLTest)
 project(${name})
 
-file(GLOB TEST_CC_SRCS "*Test.cc")
+set(TEST_SOURCES
+    OOAxisAppTest.cc
+)
 
-foreach(TEST_CC_SRC ${TEST_CC_SRCS})
-    get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
-    add_executable(${TGT} ${TEST_CC_SRC})
+foreach(SRC ${TEST_SOURCES})
+    get_filename_component(TGT ${SRC} NAME_WE)
+    add_executable(${TGT} ${SRC})
 
     add_test(${name}.${TGT} ${TGT})
     add_dependencies(check ${TGT})
 
-    target_link_libraries(${TGT} 
-               ${LIBRARIES} OpticksOp
-    )
-    install(TARGETS ${TGT} DESTINATION bin)
+    target_link_libraries(${TGT} ${LIBRARIES} OpticksGL )
+    install(TARGETS ${TGT} DESTINATION lib)
 endforeach()
 
