--- a/optickscore/tests/CMakeLists.txt
+++ b/optickscore/tests/CMakeLists.txt
@@ -15,7 +15,9 @@ set(TEST_SOURCES
     OpticksCfgTest.cc
     OpticksTest.cc
     OpticksResourceTest.cc
+
     OpticksIDPATH.cc
+    OpticksSaveResources.cc
 )
 
 
