rearrange install time things into installcache ie PTX(compiled OptiX programs), RNG(persisted cuRAND state) and OKC(photon flags)

--- a/cudarap/CMakeLists.txt
+++ b/cudarap/CMakeLists.txt
@@ -10,6 +10,8 @@ find_package(CUDA ${OPTICKS_CUDA_VERSION} REQUIRED QUIET)
 
 find_package(SysRap REQUIRED)
 
+
+## NB NO BOOST 
 set(INCLUDE_DIRS
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${PLog_INCLUDE_DIRS}
