improve clarity by putting integration tests into new top level tests folder, starting with tpmt

--- a/oglrap/tests/CMakeLists.txt
+++ b/oglrap/tests/CMakeLists.txt
@@ -4,6 +4,9 @@ project(${name})
 
 #file(GLOB TEST_CC_SRCS "*Test.cc")
 
+set(FRAGILE_TEST_SOURCES
+) 
+
 
 set(TEST_SOURCES
 
@@ -11,10 +14,10 @@ set(TEST_SOURCES
     FrameTest.cc
     ModelToWorldTest.cc
     ProgTest.cc
-    SceneTest.cc
-    AxisAppTest.cc
-    InteractorKeys.cc
 
+    InteractorKeys.cc
+    AxisAppCheck.cc
+    SceneCheck.cc
 )
 
 
@@ -22,8 +25,11 @@ foreach(TEST_CC_SRC ${TEST_SOURCES})
     get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
     add_executable(${TGT} ${TEST_CC_SRC})
 
-    add_test(${name}.${TGT} ${TGT})
-    add_dependencies(check ${TGT})
+    if (${TGT} MATCHES ".*Test$")  
+       set(testname ${name}.${TGT})
+       add_test(${testname} ${TGT})
+       add_dependencies(check ${TGT})
+    endif()
 
     target_link_libraries(${TGT} ${LIBRARIES} OGLRap)
     install(TARGETS ${TGT} DESTINATION lib)
