try separate program seedTest.cu

--- a/optixrap/CMakeLists.txt
+++ b/optixrap/CMakeLists.txt
@@ -141,6 +141,7 @@ set(SOURCES
     cu/textureTest.cu
     cu/minimalTest.cu
     cu/axisTest.cu
+    cu/seedTest.cu
 )
 
 
@@ -156,6 +157,7 @@ set(OX_PTXS
     ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_textureTest.cu.ptx
     ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_minimalTest.cu.ptx
     ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_axisTest.cu.ptx
+    ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_seedTest.cu.ptx
 )
 
 #message(" ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_minimalTest.cu.ptx " )
