--- a/optickscore/tests/CMakeLists.txt
+++ b/optickscore/tests/CMakeLists.txt
@@ -15,6 +15,7 @@ set(TEST_SOURCES
     OpticksCfgTest.cc
     OpticksTest.cc
     OpticksResourceTest.cc
+    OpticksBufferControlTest.cc
 
     OpticksIDPATH.cc
     OpticksPrepareInstallCache.cc
