migrating from old wavelength_lookup to new boundary_lookup that works with OptiX 400

--- a/optixrap/tests/CMakeLists.txt
+++ b/optixrap/tests/CMakeLists.txt
@@ -12,6 +12,7 @@ set(TEST_SOURCES
     LTOOContextUploadDownloadTest.cc
 
     OOboundaryTest.cc
+    OOboundaryLookupTest.cc
     OOtex0Test.cc
     OOtexTest.cc
 )
