--- a/optixrap/CMakeLists.txt
+++ b/optixrap/CMakeLists.txt
@@ -144,6 +144,7 @@ set(SOURCES
     cu/axisTest.cu
     cu/seedTest.cu
     cu/boundaryTest.cu
+    cu/boundaryLookupTest.cu
     cu/tex0Test.cu
     cu/texTest.cu
 )
@@ -164,6 +165,7 @@ set(OX_PTXS
     ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_axisTest.cu.ptx
     ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_seedTest.cu.ptx
     ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_boundaryTest.cu.ptx
+    ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_boundaryLookupTest.cu.ptx
     ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_tex0Test.cu.ptx
     ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_texTest.cu.ptx
 )
