review Lookup, rename to NLookup : cannot easily move due to ggeo dependency

--- a/ggeo/tests/CMakeLists.txt
+++ b/ggeo/tests/CMakeLists.txt
@@ -62,7 +62,7 @@ set(TEST_SOURCES
     GSurfaceLibTest.cc
     GTestBoxTest.cc
 
-    LookupTest.cc
+    NLookupTest.cc
     RecordsNPYTest.cc
     TorchStepNPYTest.cc
 
