highest level refactor in OpticksApp : currently breaks propagation viz

--- a/ggeoview/tests/CMakeLists.txt
+++ b/ggeoview/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ set(TEST_SOURCES
     flagsTest.cc
     OTracerTest.cc
     GGeoViewTest.cc
+    OpticksAppTest.cc
     LogTest.cc
     OpEngineTest.cc
 )
