rename to OpticksMgr from OpticksApp

--- a/ggeoview/CMakeLists.txt
+++ b/ggeoview/CMakeLists.txt
@@ -238,7 +238,7 @@ set(SOURCES
     GGV_LOG.cc
     App.cc 
     OpticksViz.cc 
-    OpticksApp.cc 
+    OpticksMgr.cc 
 )
 set(HEADERS
 
@@ -249,7 +249,7 @@ set(HEADERS
 
     App.hh
     OpticksViz.hh
-    OpticksApp.hh
+    OpticksMgr.hh
 )
 
 
