get all tests to write logfiles named after the executable with .log appended within the tests folders of build tree where ctest invokes them

--- a/sysrap/tests/CMakeLists.txt
+++ b/sysrap/tests/CMakeLists.txt
@@ -10,6 +10,7 @@ set(TEST_SOURCES
    PLogTest.cc 
    PLOG_Test.cc 
    SYSRAP_LOG_Test.cc 
+   SYSRAP_LOG_FileAppenderTest.cc
 )
 
 foreach(SRC ${TEST_SOURCES})
