--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,9 +97,9 @@ if(REST)
    add_subdirectory(ggeoview)
 
    find_package(Geant4 QUIET)
-   #find_package(Geant4)
    if(Geant4_FOUND)
       add_subdirectory(cfg4)
+      add_subdirectory(okg4)
    else(Geant4_FOUND)
       message("${name}.Geant4_FOUND_NOT")
    endif(Geant4_FOUND)
