--- a/okg4/CMakeLists.txt
+++ b/okg4/CMakeLists.txt
@@ -7,6 +7,17 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${OptiX_INSTALL_DIR}/SDK/CMake")
 include(EnvBuildOptions)
 
 
+###
+### TODO: FIND CMake approach THAT AVOIDS ALL THE DUPLICATION
+###       BETWEEN HERE AND GGeoView 
+###       (TRANSITIVE TARGETS AND ALL THAT ...)
+###
+### HOWEVER: 
+###       BEFORE CAN DO THIS NEED TO HAVE THE WINDOWS BUILD ALIVE AND 
+###       RUNNING AS MAJOR CMAKE CHANGES ARE LIABLE TO BREAK THE WINDOWS
+###       .SLN GENERATION AND WINDOWS BUILD
+###        
+###
 ########### OPTICKS #####
 
 if(WITH_OPTIX)
